added baf in link

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="/baf/baf/assets/css/style.css">
 
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
@@ -20,16 +20,16 @@
 
     <div class="cards" id="cards">
       <div class="card_1" onclick="nextStep()">
-        <img src="/assets/image/svg/new-mp-home.svg" alt="">
+        <img src="/baf/assets/image/svg/new-mp-home.svg" alt="">
       </div>
       <div class="card_2">
-        <img src="/assets/image/svg/new-syana-home.svg" alt="">
+        <img src="/baf/assets/image/svg/new-syana-home.svg" alt="">
       </div>
       <div class="card_3">
-        <img src="/assets/image/svg/new-car-home.svg" alt="">
+        <img src="/baf/assets/image/svg/new-car-home.svg" alt="">
       </div>
       <div class="card_4">
-        <img src="/assets/image/svg/new-nmc-home.svg" alt="">
+        <img src="/baf/assets/image/svg/new-nmc-home.svg" alt="">
       </div>
     </div>
 
