--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
       window.parent.postMessage(JSON.stringify({
         event_code: 'custom-recent-order-event',
-        data: { phone: config.phone }
+        data: data
       }), '*');
 
     }
