--- a/index.html
+++ b/index.html
@@ -101,6 +101,75 @@
 
       </form>
     </div>
+
+    <div class="ele_form hide" id="ele_form">
+      <form action="#" class="form" id="myForm">
+
+        <div class="mb-2">
+          <label for="Pilih Tipe Barang">Pilih Tipe Barang</label>
+          <div class="">
+            <select class="form-control" style="width: 100%;" id="eleForm1">
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="mb-2">
+          <label for="Pilih Merk Barang">Pilih Merk Barang</label>
+          <div class="">
+            <select class="form-control" style="width: 100%;" id="eleForm2">
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="mb-2">
+          <label for="Harga Barang">Harga Barang</label>
+          <div>
+            <input type="text" id="eleForm3">
+          </div>
+        </div>
+
+        <div class="mb-2">
+          <label for="Jangka Waktu">Jangka Waktu</label>
+          <div class="">
+            <select class="form-control" style="width: 100%;" id="eleForm4">
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="mb-2">
+          <label for="Uang Muka">Uang Muka</label>
+          <div class="">
+            <select class="form-control" style="width: 100%;" id="eleForm5">
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="submit_div">
+          <button type="submit" class="submit" onclick="myFunction()">HitungCicilan Anda</button>
+        </div>
+
+      </form>
+    </div>
   </div>
 
 
@@ -142,6 +211,16 @@
 
     }
 
+
+    window.addEventListener('message', function (eventData) {
+      const parsedEventData = JSON.parse(eventData.data)
+      if (parsedEventData.event_code === "custom-child-client-event") {
+        console.log('In INDEX.HTML')
+        console.log("\n\n\n\n\n\n\n <---- parsed event data ---> \n\n\n\n\n\n\n\n", parsedEventData);
+
+      }
+
+    });
 
   </script>
 
