--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
           <label for="Pilih Tipe Barang">Pilih Merk Motor</label>
           <div class="">
             <select class="form-control" style="width: 100%;" id="eleForm6">
+              <option value="">Silahkan Pilih</option>
               <option value="Yamaha">Yamaha</option>
               <option value="Honda">Honda</option>
               <option value="Kawasaki">Kawasaki</option>
@@ -135,6 +136,7 @@
           <label for="Jangka Waktu">Jangka Waktu</label>
           <div class="">
             <select class="form-control" style="width: 100%;" id="eleForm9">
+              <option value="">Silahkan Pilih</option>
               <option value="6 bulan">6 bulan</option>
               <option value="12 bulan">12 bulan</option>
               <option value="18 bulan">18 bulan</option>
