Added code for Main data

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
       if (parsedEventData.event_code === "custom-child-client-event") {
         console.log('In INDEX.HTML')
         console.log("\n\n\n\n\n\n\n <---- parsed event data ---> \n\n\n\n\n\n\n\n", parsedEventData);
-
+        console.log("data ---->", parsedEventData.data);
       }
 
     });
