--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
       $("#ele_form").addClass("show");
       window.parent.postMessage(JSON.stringify({
         event_code: 'custom-recent-order-event',
-        data: data
+        data: ''
       }), '*');
     }
 
