--- a/index.html
+++ b/index.html
@@ -247,6 +247,8 @@
 
   <script>
 
+    let ristID = []
+    let str;
 
     window.addEventListener('message', function (eventData) {
       console.log('In INDEX.HTML')
@@ -257,10 +259,22 @@
         console.log("data ---->", parsedEventData.data);
         console.log("main data ---->", parsedEventData.data.data);
         let data = parsedEventData.data.data;
+
         for (let i = 0; i < data.length; i++) {
           let id = data[i].RiskTypeId
           console.log('id--->', id)
+          if (id !== '') {
+            ristID.push(id);
+          }
         }
+
+        for (var item of ristID) {
+          str += "<option>" + item + "</option>"
+        }
+
+
+        document.getElementById("eleForm1").innerHTML = str;
+
       }
 
     });
