--- a/index.html
+++ b/index.html
@@ -247,6 +247,16 @@
 
   <script>
 
+
+    document.getElementById("eleForm2").disabled = true;
+    document.getElementById("eleForm3").disabled = true;
+    document.getElementById("eleForm4").disabled = true;
+    document.getElementById("eleForm5").disabled = true;
+
+    // $('#eleForm2').disabled = true;
+    // $('#eleForm3').disabled = true;
+    // $('#eleForm4').disabled = true;
+    // $('#eleForm5').disabled = true;
     let ristID = []
     let str;
 
