--- a/index.html
+++ b/index.html
@@ -248,10 +248,10 @@
   <script>
 
 
-    document.getElementById("eleForm2").disabled = true;
-    document.getElementById("eleForm3").disabled = true;
-    document.getElementById("eleForm4").disabled = true;
-    document.getElementById("eleForm5").disabled = true;
+    // document.getElementById("eleForm2").disabled = true;
+    // document.getElementById("eleForm3").disabled = true;
+    // document.getElementById("eleForm4").disabled = true;
+    // document.getElementById("eleForm5").disabled = true;
 
     // $('#eleForm2').disabled = true;
     // $('#eleForm3').disabled = true;
