--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
           }
         }
 
-        for (var item of ristID) {
+        for (var item of descr) {
           str += "<option>" + item + "</option>"
         }
 
