--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         }
 
         for (var item of newData) {
-          console.log('Data', items[0].id)
+          console.log('Data', item[0].id)
           // str = `<option value=${item}>Volvo</option>`
           // str += "<option>" + item + "</option>"
         }
