--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
           let id = data[i].Descr;
           let code = data[i].Code;
           console.log('id--->', id)
+          console.log('code-->', code)
           newData.push({ "descr": id, "code": code });
           // if (id !== '') {
           //   descr.push(id);
