--- a/index.html
+++ b/index.html
@@ -273,16 +273,17 @@
           let code = data[i].Code;
           console.log('id--->', id)
           console.log('code-->', code)
-          newData.push({ "descr": id, "code": code });
-          // if (id !== '') {
-          //   descr.push(id);
-          //   codes.push(code);
-          // }
+
+          if (id !== '') {
+            newData.push({ "descr": id, "code": code });
+            // descr.push(id);
+            // codes.push(code);
+          }
         }
 
         for (var item of newData) {
           console.log('Items->', item)
-          console.log('Data from array of objects-->', item[0].descr)
+          // console.log('Data from array of objects-->', item[0].descr)
           // str = `<option value=${item}>Volvo</option>`
           // str += "<option>" + item + "</option>"
         }
