--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
 
         for (var item of newData) {
           console.log('Items->', item)
-          // console.log('Data from array of objects-->', item[0].descr)
-          // str = `<option value=${item}>Volvo</option>`
+          console.log('Data from array of objects-->', item.descr)
+          str = `<option value=${item.code}>${item.descr}</option>`
           // str += "<option>" + item + "</option>"
         }
 
