--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         for (var item of newData) {
           console.log('Items->', item)
           console.log('Data from array of objects-->', item.descr)
-          str = `<option value=${item.code}>${item.descr}</option>`
+          str += `<option value=${item.code}>${item.descr}</option>`
           // str += "<option>" + item + "</option>"
         }
 
