--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
       console.log('x-->', x);
       window.parent.postMessage(JSON.stringify({
         event_code: 'custom-select-option-1',
-        data: ''
+        data: x
       }), '*');
     }
 
