--- a/index.html
+++ b/index.html
@@ -294,6 +294,28 @@
         console.log('Hard Log')
         console.log("\n\n\n\n\n\n\n <---- Html ---> \n\n\n\n\n\n\n\n", parsedEventData);
         console.log("\n\n\n\n\n\n\n <---- pilihMerk Data ---> \n\n\n\n\n\n\n\n", parsedEventData.data);
+        let data = parsedEventData.data.data;
+        for (let i = 0; i < data.length; i++) {
+          let id = data[i].Descr;
+          let code = data[i].Code;
+          console.log('id--->', id)
+          console.log('code-->', code)
+
+          if (id !== '') {
+            newData.push({ "descr": id, "code": code });
+            // descr.push(id);
+            // codes.push(code);
+          }
+        }
+
+        for (var item of newData) {
+          console.log('Items->', item)
+          console.log('Data from array of objects-->', item.descr)
+          str += `<option value=${item.code}>${item.descr}</option>`
+          // str += "<option>" + item + "</option>"
+        }
+        document.getElementById("eleForm2").disabled = false;
+        document.getElementById("eleForm2").innerHTML = str;
       }
 
     });
