--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
           // str += "<option>" + item + "</option>"
         }
         document.getElementById("eleForm1").innerHTML = str;
-        reset()
+        reset();
 
       }
 
@@ -479,6 +479,7 @@
     function reset() {
       descr = []
       codes = []
+      console.log('reset data--->')
     }
   </script>
 
