--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
         document.getElementById("eleForm1").innerHTML = str;
         descr = []
         codes = []
-
+        newData = []
       }
 
       if (parsedEventData.event_code === "pilihMerk") {
