--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@
         descr = []
         codes = []
         newData = []
+        str = ''
       }
 
       if (parsedEventData.event_code === "pilihMerk") {
