--- a/index.html
+++ b/index.html
@@ -452,6 +452,7 @@
           // str += "<option>" + item + "</option>"
         }
         document.getElementById("eleForm2").disabled = false;
+        document.getElementById("eleForm3").disabled = false;
         document.getElementById("eleForm2").innerHTML = str;
       }
 
