--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
     function hargaFn() {
       let inputData = document.getElementById('eleForm3');
       if (inputData !== '') {
-        alert('here -- Send Event');
+        console.log('In Harga')
       }
     }
 
