--- a/index.html
+++ b/index.html
@@ -526,12 +526,12 @@
       }), '*');
     }
 
-    function hargaFn() {
-      let inputData = document.getElementById('eleForm3');
-      if (inputData !== '') {
-        console.log('In Harga')
-      }
-    }
+    // function hargaFn() {
+    //   let inputData = document.getElementById('eleForm3');
+    //   if (inputData !== '') {
+    //     console.log('In Harga')
+    //   }
+    // }
 
 
 
