--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="./assets/css/style.css">
 
-  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -40,11 +40,7 @@
           <label for="Pilih Tipe Barang">Pilih Tipe Barang</label>
           <div class="">
             <select class="form-control" style="width: 100%;" id="eleForm1" onchange="optionSelection()">
-              <option value="1">1</option>
-              <option value="2">2</option>
-              <option value="3">3</option>
-              <option value="4">4</option>
-              <option value="5">5</option>
+              <option value="">Silahkan Pilih</option>
             </select>
           </div>
         </div>
@@ -53,11 +49,7 @@
           <label for="Pilih Merk Barang">Pilih Merk Barang</label>
           <div class="">
             <select class="form-control" style="width: 100%;" id="eleForm2" disabled>
-              <option>1</option>
-              <option>2</option>
-              <option>3</option>
-              <option>4</option>
-              <option>5</option>
+              <option value="">Silahkan Pilih</option>
             </select>
           </div>
         </div>
@@ -73,11 +65,7 @@
           <label for="Jangka Waktu">Jangka Waktu</label>
           <div class="">
             <select class="form-control" style="width: 100%;" id="eleForm4" disabled>
-              <option>1</option>
-              <option>2</option>
-              <option>3</option>
-              <option>4</option>
-              <option>5</option>
+              <option value="">Silahkan Pilih</option>
             </select>
           </div>
         </div>
@@ -86,11 +74,7 @@
           <label for="Uang Muka">Uang Muka</label>
           <div class="">
             <select class="form-control" style="width: 100%;" id="eleForm5" disabled>
-              <option>1</option>
-              <option>2</option>
-              <option>3</option>
-              <option>4</option>
-              <option>5</option>
+              <option value="">Silahkan Pilih</option>
             </select>
           </div>
         </div>
@@ -382,6 +366,7 @@
     window.addEventListener('message', function (eventData) {
       console.log('In INDEX.HTML')
       const parsedEventData = JSON.parse(eventData.data)
+      console.log(parsedEventData, "parsedEventData");
       if (parsedEventData.event_code === "custom-child-client-event") {
         console.log('Hard Log')
         console.log("\n\n\n\n\n\n\n <---- parsed event data ---> \n\n\n\n\n\n\n\n", parsedEventData);
