--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
       }
 
 
-      if (parsedEventData.event_code === "jangkaWaktu") {
+      if (parsedEventData.event_code === "jangkaWaktu-childIframe") {
         console.log('jangkaWaktu')
         console.log("\n\n\n\n\n\n\n <---- Html ---> \n\n\n\n\n\n\n\n", parsedEventData);
         console.log("\n\n\n\n\n\n\n <---- jangkaWaktu Data ---> \n\n\n\n\n\n\n\n", parsedEventData.data);
