--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
         console.log('Data is there');
         document.getElementById("eleForm3").disabled = false;
         window.parent.postMessage(JSON.stringify({
-          event_code: 'jangkaWaktu',
+          event_code: 'jangkaWaktu-userInput',
           data: inputData
         }), '*');
       }
