--- a/index.html
+++ b/index.html
@@ -444,33 +444,32 @@
         console.log('jangkaWaktu')
         console.log("\n\n\n\n\n\n\n <---- Html ---> \n\n\n\n\n\n\n\n", parsedEventData);
         console.log("\n\n\n\n\n\n\n <---- jangkaWaktu Data ---> \n\n\n\n\n\n\n\n", parsedEventData.data);
-        let data = parsedEventData.data;
+        let data = parsedEventData.data.result.Tenor;
         console.log('data------>', data)
         console.log('data 1------>', data.result.Tenor)
-        // for (let i = 0; i < data.length; i++) {
-        //   let id = data[i].Descr;
-        //   let code = data[i].Code;
-        //   console.log('id--->', id)
-        //   console.log('code-->', code)
+        for (let i = 0; i < data.length; i++) {
+          let id = data[i].Descr;
+          let code = data[i].Code;
+          console.log('id--->', id)
+          console.log('code-->', code)
 
-        //   if (id !== '') {
-        //     newData.push({ "descr": id, "code": code });
-        //   }
-        // }
+          if (id !== '') {
+            newData.push({ "descr": id, "code": code });
+          }
+        }
 
-        // for (var item of newData) {
-        //   console.log('Items->', item)
-        //   console.log('Data from array of objects-->', item.descr)
-        //   str += `<option value=${item.code}>${item.descr}</option>`
-        // }
-        // document.getElementById("eleForm2").disabled = false;
-        // document.getElementById("eleForm3").disabled = false;
-        // document.getElementById("eleForm2").innerHTML = str;
+        for (var item of newData) {
+          console.log('Items->', item)
+          console.log('Data from array of objects-->', item.descr)
+          str += `<option value=${item.code}>${item.descr}</option>`
+        }
+        document.getElementById("eleForm4").disabled = false;
+        document.getElementById("eleForm4").innerHTML = str;
 
-        // descr = []
-        // codes = []
-        // newData = []
-        // str = ''
+        descr = []
+        codes = []
+        newData = []
+        str = ''
       }
 
     });
@@ -611,7 +610,7 @@
       // jangkaWaktu
       if (inputData !== '' || inputData !== null) {
         console.log('Data is there');
-        document.getElementById("eleForm3").disabled = false;
+        document.getElementById("eleForm4").disabled = false;
         window.parent.postMessage(JSON.stringify({
           event_code: 'harga',
           data: inputData
