--- a/index.html
+++ b/index.html
@@ -445,30 +445,30 @@
         console.log("\n\n\n\n\n\n\n <---- Html ---> \n\n\n\n\n\n\n\n", parsedEventData);
         console.log("\n\n\n\n\n\n\n <---- jangkaWaktu Data ---> \n\n\n\n\n\n\n\n", parsedEventData.data);
         let data = parsedEventData.data.result.Tenor;
-        console.log('data------>', data)
-        for (let i = 0; i < data.length; i++) {
-          let id = data[i].Descr;
-          let code = data[i].Code;
-          console.log('id--->', id)
-          console.log('code-->', code)
+        console.log('data------>', data[0])
+        // for (let i = 0; i < data.length; i++) {
+        //   let id = data[i].Descr;
+        //   let code = data[i].Code;
+        //   console.log('id--->', id)
+        //   console.log('code-->', code)
 
-          if (id !== '') {
-            newData.push({ "descr": id, "code": code });
-          }
-        }
+        //   if (id !== '') {
+        //     newData.push({ "descr": id, "code": code });
+        //   }
+        // }
 
-        for (var item of newData) {
-          console.log('Items->', item)
-          console.log('Data from array of objects-->', item.descr)
-          str += `<option value=${item.code}>${item.descr}</option>`
-        }
-        document.getElementById("eleForm4").disabled = false;
-        document.getElementById("eleForm4").innerHTML = str;
+        // for (var item of newData) {
+        //   console.log('Items->', item)
+        //   console.log('Data from array of objects-->', item.descr)
+        //   str += `<option value=${item.code}>${item.descr}</option>`
+        // }
+        // document.getElementById("eleForm4").disabled = false;
+        // document.getElementById("eleForm4").innerHTML = str;
 
-        descr = []
-        codes = []
-        newData = []
-        str = ''
+        // descr = []
+        // codes = []
+        // newData = []
+        // str = ''
       }
 
     });
