--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
 
         for (var item of newData) {
           console.log('Items->', item)
-          str += `<option value=${item.num}>${item.num}</option>`
+          str += `<option value=${item.id}>${item.id}</option>`
         }
         document.getElementById("eleForm4").disabled = false;
         document.getElementById("eleForm4").innerHTML = str;
